fixed everything todo
