# server/src/main/java/org/elvira/studentdeanury/server/repository/dao/StudentSubjectModel.java
@@ -1,26 +1,0 @@
-package org.elvira.studentdeanury.server.repository.dao;
-
-import lombok.Getter;
-import lombok.Setter;
-import lombok.experimental.Accessors;
-
-import javax.persistence.*;
-
-@Getter
-@Setter
-@Accessors(chain = true)
-@Entity
-@Table(name = "student_subject")
-public class StudentSubjectModel {// todo этот класс нигде не используется. удалить
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
-    @ManyToOne
-    @JoinColumn(name = "student_id")
-    private StudentModel student;
-
-    @ManyToOne
-    @JoinColumn(name = "subject_id")
-    private SubjectModel subjectDao;
-}
